--- a/Posttest2.ipynb
+++ b/Posttest2.ipynb
@@ -256,7 +256,7 @@
     "\n",
     "---\n",
     "\n",
-    "### Kesimpulan Utama\n",
+    "### Kesimpulan Keseluruhan\n",
     "- Sebagian besar siswa berada di **tingkat menengah** dalam ketiga bidang (Math, Reading, Writing).  \n",
     "- **Kemampuan bahasa** (reading & writing) memiliki hubungan paling erat, sehingga siswa yang kuat membaca hampir pasti kuat menulis.  \n",
     "- **Math Score** memiliki variasi yang besar dan lebih terdistribusi lebar, sehingga cocok dijadikan **variabel target** untuk prediksi/permodelan machine learning.  \n",
